--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ authors = [
 maintainers = [
     {name = "Erik Schweller", email = "othererik@gmail.com"}
 ]
+
+[project.optional-dependencies]
+color = ["colorama>=0.4.0"]
 keywords = [
     "de-duplication",
     "file management",
