--- a/.github/workflows/flake-and-tests.yml
+++ b/.github/workflows/flake-and-tests.yml
@@ -21,17 +21,20 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pylint flake8 pytest pytest-xdist
+        python -m pip install pylint flake8 pytest pytest-xdist mypy colorama colorama-types
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 . --count --exit-zero --max-complexity=27 --max-line-length=127 --statistics
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        pylint .
+    - name: Analysing the code with mypy
+      run: |
+        mypy .
     - name: Test with pytest
       run: |
         pytest -n auto
