--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,3 +49,6 @@ dedupecopy = "dedupe_copy.bin.dedupecopy_cli:run_cli"
 
 [tool.setuptools]
 packages = ["dedupe_copy", "dedupe_copy.bin", "dedupe_copy.test"]
+
+[tool.pylint."MESSAGES CONTROL"]
+disable = ["R0913", "R0914", "R0902", "R0801"]
