trying to get coverage reports working

--- a/.github/workflows/coverage-comment.yml
+++ b/.github/workflows/coverage-comment.yml
@@ -28,12 +28,14 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests and generate coverage report
-        run: |
-            echo -n '[run]\n  relative_files = true' > .coveragerc
-            pytest --cov=./ --cov-report=xml
+        run: pytest--cov=./ --cov-report=xml
 
       - name: Python Coverage Comment
         uses: py-cov-action/python-coverage-comment-action@v3
         with:
           GITHUB_TOKEN: ${{ github.token }}
           COVERAGE_DATA_BRANCH: python-coverage-comment-action-data
+
+      - name: Enforce coverage
+        if: ${{ steps.coverage_comment.outputs.new_percent_covered < steps.coverage_comment.outputs.reference_percent_covered }}
+        run: echo "Coverage decreased." && exit 1
