--- a/.github/workflows/flake-and-tests.yml
+++ b/.github/workflows/flake-and-tests.yml
@@ -21,8 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pylint flake8 pytest pytest-xdist mypy colorama types-colorama pandas-stubs
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f requirements-full.txt ]; then pip install -r requirements-full.txt; fi
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
