--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ relative_files = true
 omit = [
     "dedupe_copy/test/record_disk_cache_dict_performance.py",
     "dedupe_copy/test/record_manifest_save_performance.py",
+    "dedupe_copy/test/benchmark_manifest_save.py",
 ]
 
 [tool.pylint."MESSAGES CONTROL"]
