add rich requirment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # minimial set of dependencies to run the application with all features
 # these are also optional and the main workflow will work without them
 colorama
+rich
 xxhash
