--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "DedupeCopy"
-version = "1.2.0"
+version = "1.2.1"
 description = "Find duplicates / copy and restructure file layout command-line tool"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -76,3 +76,6 @@ omit = [
 
 [tool.pylint."MESSAGES CONTROL"]
 disable = ["R0913", "R0914", "R0902", "R0801", "R0917"]
+
+[tool.pylint.MASTER]
+ignore = ["build"]
